--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^9.0.11"
+    "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.11",
+    "mini-css-extract-plugin": "^2.9.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "config": {
     "commitizen": {
