chore: adiciona scripts de build e de desenvolvimento do projeto

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "frontend-ps",
   "version": "1.0.0",
   "scripts": {
-    "commit": "cz"
+    "commit": "cz",
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "author": "",
   "license": "ISC",
